# crystal-tts

./: LICENSE  demo.py  dsp.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
Crystal_tts/: __init__.py  larynx2phonemize.py  model_config.py  speechplayer.py  tts.py  utils.py  voice.py
nvwave/: __init__.py
